# Portfolio

./: .gitignore  404.html  BLOG_REGENERATION_SETUP.md  CNAME  Cargo.toml  FIREBASE_FIX_SUMMARY.md  FIRESTORE_SECURITY_RULES_FIX.md  README.md  SPOTIFY_SETUP.md  Trunk.toml  blog_content_splitting_guide.md  copy-images.sh  firebase_auth_setup.md  firebase_blog_setup.md  firebase_setup_guide.md  firestore.rules  firestore_rules_fix.md  firestore_rules_setup.md  generate-blog-pages.js  generate-image-manifest.js  index.html  package.json  preview-generator.html  set_counters.html  theplan.txt  webhook-server.js
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  regenerate-blog-pages.yml
api/: regenerate-blog-pages.js
blog/: images.json
src/: main.rs  main_backup.rs  main_minimal.rs
src/components/: about.rs  blog_admin.rs  blog_auth.rs  blog_list.rs  blog_post.rs  contact.rs  counter.rs  header.rs  leaderboard.rs  leaderboard_backup.rs  leaderboard_clean.rs  matrix_rain.rs  mod.rs  projects.rs  skills.rs  snake.rs  spotify.rs  spotify_new.rs  streaming.rs  terminal.rs  theme_config.rs
styles/: main.scss
styles/themes/: _config.scss  _cyberpunk.scss  _halloween.scss  _retro.scss  _winter.scss
