[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
