[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "Window",
  "KeyboardEvent",
  "CryptoKey",
  "SubtleCrypto",
  "Crypto",
  "TextEncoder",
  "File",
  "FileReader",
  "Blob",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
gloo-net = "0.6.0"
md5 = "0.7"
yew-router = "0.18"
